--- a/frontend/src/css/homeCss.css
+++ b/frontend/src/css/homeCss.css
@@ -62,6 +62,9 @@ table {
     margin-top: 150px;
     
 }
+img {
+    height: 50px;
+}
 /* h1 { */
     /* background-color: aqua; */
     /* height: 100px; */
