--- a/frontend/src/features/calendar/calendar.css
+++ b/frontend/src/features/calendar/calendar.css
@@ -1,5 +1,5 @@
 
-.calendar-container,
+/* .calendar-container,
 .calendar,
 .calendar-header,
 td,
@@ -103,4 +103,4 @@ tr {
 
 .label-month {
     cursor: pointer;
-}
+} */
