--- a/frontend/src/css/homeCss.css
+++ b/frontend/src/css/homeCss.css
@@ -67,6 +67,104 @@ table {
 img {
     height: 50px;
 }
+#title {
+    height: 50px;
+}
+.icons {
+    position: fixed;
+    left: 7%;
+    margin-top: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+.clipClock {
+    background-color: rgb(245, 245, 245, 0.5);
+    /* opacity: 0.2; */
+    height: 75px;
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#clipClock {
+    /* position: fixed;
+    left: 6%;
+    margin-top: 20px; */
+}
+.clipboard {
+    background-color: rgb(245, 245, 245, 0.5);
+    margin-top: 10px;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#clipboard {
+    /* margin-top: 30px; */
+}
+.clockjs {
+    background-color: rgb(245, 245, 245, 0.5);
+    position: fixed;
+    left: 40%;
+    height: 200px;
+    text-align: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+#day {
+    font-size: 50px;
+}
+#clock {
+    font-size: 70px;
+    margin-top: 30px;
+    color: rgb(60,111,113);
+}
+.weather {
+    background-color: rgb(245, 245, 245, 0.5);
+    position: fixed;
+    left: 40%;
+    top: 35%;
+    width: 440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.weather > h1 {
+    font-size: 20px;
+}
+#weathicon {
+    width: 100px;
+    height: 90px;
+    margin-top: 0%;
+}
+#temp {
+    font-size: 60px;
+    color: rgb(60,111,113);
+    margin-top: 10px;
+}
+#taskForm {
+    /* display: flex;
+    flex-direction: column; */
+    position: absolute;
+    top: 50%;
+    
+}
+.formBorder {
+    position: fixed;
+    left: 13%;
+    top: 15%;
+    background-color: rgb(60,111,113);
+    height: 200px;
+    justify-content: center;
+}
+#timeinput {
+    
+}
+
 /* h1 { */
     /* background-color: aqua; */
     /* height: 100px; */
