--- a/frontend/src/css/homeCss.css
+++ b/frontend/src/css/homeCss.css
@@ -146,26 +146,41 @@ img {
     color: rgb(60,111,113);
     margin-top: 10px;
 }
-#taskForm {
-    /* display: flex;
-    flex-direction: column; */
-    position: absolute;
-    top: 50%;
-    
-}
+
+
 .formBorder {
     position: fixed;
     left: 13%;
     top: 15%;
-    background-color: rgb(60,111,113);
+    background-color: rgb(60,111,113, 0.9);
     height: 200px;
+    width: 220px;
+    display: flex;
     justify-content: center;
+    /* justify-content: space-around; */
+    align-items: center;
+    border-radius: 10px;
+}
+.formBorder > input{
+    /* margin-bottom: 15px; */
 }
 #timeinput {
-    
+    border-radius: 10px;
+    /* width: 50px; */
+    margin-bottom: 15px;
 }
+.start {
+    display: flex;
+    flex-direction: column;
+    /* width: 100px; */
 
-/* h1 { */
-    /* background-color: aqua; */
-    /* height: 100px; */
-/* } */
+}
+.alarm {
+    /* background-color: rgb(60,111,113, 0.9); */
+    /* height: 200px;
+    width: 220px; */
+}
+/* .alarm > h1{
+    font-size: 50px;
+} */
+
