--- a/frontend/src/css/homeCss.css
+++ b/frontend/src/css/homeCss.css
@@ -176,9 +176,19 @@ img {
 
 }
 .alarm {
+    position: fixed;
+    left: 0%;
+    bottom: 0%;
+
     /* background-color: rgb(60,111,113, 0.9); */
     /* height: 200px;
     width: 220px; */
+}
+#ADtime {
+    font-size: 100px;
+}
+#ADtask {
+    font-size: 50px;
 }
 /* .alarm > h1{
     font-size: 50px;
